ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

# Icon
icondir			= $(datadir)/icons/hicolor/48x48/apps/
icon_DATA		= gfourcc.png

# @INTLTOOL_DESKTOP_RULE@
# DESKTOP_IN_IN_FILES = gfourcc.desktop.in.in
# DESKTOP_IN_FILES = gfourcc.desktop.in
# DESKTOP_FILES =$(DESKTOP_IN_FILES:.desktop.in=.desktop)
# desktopdir = $(datadir)/applications
# desktop_DATA = $(DESKTOP_FILES)

# CLEANFILES = $(bin_PROGRAMS) $(DESKTOP_IN_FILES)

# gfourcc.desktop.in:  gfourcc.desktop.in.in Makefile
#	$(do_subst) < $(srcdir)/gfourcc.desktop.in.in > gfourcc.desktop.in

# EXTRA_DIST =				\
#	$(DESKTOP_IN_IN_FILES)	\
#	$(DESKTOP_FILES)		\
#	autogen.sh				\
#	gfourcc.png

EXTRA_DIST =				\
	autogen.sh				\
	gfourcc.png
